--- a/style.css
+++ b/style.css
@@ -47,3 +47,11 @@ h1 {
 .book-card li:first-child {
   font-size: 1.7rem;
 }
+
+button {
+  color: white;
+  border: 0;
+  padding: 9px;
+  background: rgba(0, 0, 0, 0.568);
+  border-radius: 5px;
+}
