--- a/style.css
+++ b/style.css
@@ -55,3 +55,26 @@ button {
   background: rgba(0, 0, 0, 0.568);
   border-radius: 5px;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  text-align: center;
+  background: rgba(43, 20, 2, 0.568);
+  padding: 15px;
+  margin: 35px auto;
+  max-width: 50%;
+  border-radius: 5px;
+  justify-content: space-between;
+}
+
+form > * {
+  margin-bottom: 15px;
+  width: 80%;
+}
+
+input {
+  padding: 5px;
+}
