--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url("background.jpg");
+  background: url("bg.jpg");
   color: rgb(247, 243, 243);
   text-align: center;
   font-family: Helvetica, sans-serif;
@@ -11,7 +11,7 @@ h1 {
 }
 
 .my-library {
-  margin-top: 100px;
+  margin: 50px auto;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -39,7 +39,6 @@ h1 {
 .book-card li {
   padding: 10px 0;
 }
-
 .book-buttons {
   display: flex;
   justify-content: space-between;
@@ -70,7 +69,6 @@ form {
   border-radius: 5px;
   justify-content: space-between;
 }
-
 form > * {
   margin-bottom: 15px;
   width: 80%;
